--- a/style.css
+++ b/style.css
@@ -102,20 +102,18 @@ section.mySkills div.container {
 /* --------------------------------------------------------------------- */
 
 section.myExperience .container {
-  width: 90%;
-  height: 192px;
   border-radius: 10px;
   border: 1px solid #27272a;
   margin-bottom: 50px;
   padding: 15px;
-  overflow: hidden;
+  text-align: center;
+  width: 90%;
 }
 section.myExperience .container:hover {
   background: #27272a;
   transition: 0.5s;
   cursor: pointer;
 }
-
 section.myExperience .headerExDate {
   font-family: Sora;
   font-style: normal;
@@ -137,6 +135,14 @@ section.myExperience .headerExText {
   color: #ffffff;
 }
 /* --------------------------------------------------------------------- */
+
+section.aboutMe{
+  display: grid;
+  padding: 0 5%;
+  grid-template-columns:repeat(auto-fit,minmax(min(22rem,100%), 1fr));
+  grid-gap: 2rem;
+}
+
 section.aboutMe .TextAboutMe {
   font-family: Sora;
   font-style: normal;
@@ -366,3 +372,4 @@ section.intro .paragraph {
     height: 90px;
   }
 }
+ 
