--- a/style.css
+++ b/style.css
@@ -271,9 +271,8 @@ section.contactMe {
   flex-wrap: wrap;
   justify-content: space-evenly;
   gap: 15px;
+
   
-  overflow: scroll;
-  -webkit-scrollbar: none;
 }
 section.contactMe .text {
   font-family: Sora;
@@ -330,9 +329,12 @@ footer {
   height: 100px;
   background-color: #000000;
   display: flex;
-  justify-content: space-between;
+  justify-content: center;
   align-items: center;
   padding: 0 5%;
+  flex-wrap: wrap;
+  gap: 15px;
+
 }
 footer .text1 {
   font-family: Sora;
@@ -443,4 +445,13 @@ section.intro .paragraph {
   .photo {
     width: 300px;
   }
+  section.contactMe .container {
+    padding-left: 10px;
+  }
+  section.contactMe {
+  
+
+  overflow: scroll;
+  -webkit-scrollbar: none;
+}
 }
